# pattern-matching-with-nfa

./: .gitignore  CMakeLists.txt  README.md
include/: Expr.hpp  Match.hpp  NFASim.hpp  Parser.hpp  Re2NFA.hpp  Re2Post.hpp  State.hpp  Visitor.hpp
src/: Expr.cpp  Match.cpp  NFASim.cpp  Parser.cpp  Re2NFA.cpp  Re2Post.cpp  State.cpp  main.cpp
